--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="format-detection" content="telephone=no, email=no" />
     
-    <title>React App</title>
+    <title>WorkerBook</title>
 
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
